fix overflow. header dark mode. darkmode cache

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -12,14 +12,21 @@ input:focus {
 	outline: none;
 }
 
-.app {
+body {
 	font-family: Poppins;
 	min-width: 100vw;
 	max-width: 100vw;
+	overflow: hidden;
 	height: calc(100vh);
 }
 
+/* .app {
+	
+} */
+
 .content {
 	min-height: calc(100vh - 50px); /* 50px - header's height  */
+	max-height: calc(100vh - 50px); /* 50px - header's height  */
 	overflow-x: hidden;
+	overflow-y: auto;
 }
